// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefaultButton /> tests should render a default button 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-1 MuiButton-containedPrimary"
  data-testid="button"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      data-testid="button-content"
    >
      Some button content
    </span>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<DefaultButton /> tests should render a large button 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-43 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge"
  data-testid="button"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      data-testid="button-content"
    >
      Some button content
    </span>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<DefaultButton /> tests should render a secondary button 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-85 MuiButton-containedSecondary"
  data-testid="button"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      data-testid="button-content"
    >
      Some button content
    </span>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`<DefaultButton /> tests should render an outlined secondary button 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-127 MuiButton-outlinedSecondary"
  data-testid="button"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label"
  >
    <span
      data-testid="button-content"
    >
      Some button content
    </span>
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;
